<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="enter_name_of_player_1">Enter name of Player 1</string>
    <string name="enter_name_of_player_2">Enter name of Player 2</string>
    <string name="play">PLAY</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="title_of_app">Title of app</string>
    <string name="image_of_tic_tac_toe">image of tic tac toe</string>
    <string name="add_player_1_name">add player 1 name</string>
    <string name="add_player_2_name">add player 2 name</string>
    <string name="cross_image">cross image</string>
    <string name="circle_image">circle image</string>
    <string name="play_button">Play button</string>
    <string name="go_to_next_activity">Go to next activity</string>
    <string name="name1">Name1</string>
    <string name="name2">Name2</string>
    <string name="draw">Draw :</string>
    <string name="p1name">P1Name</string>
    <string name="c2">c2</string>
    <string name="c1">c1</string>
    <string name="c3">c3</string>
    <string name="p2name">p2Name</string>
    <string name="score">Scores :</string>
    <string name="share_button">share button</string>
    <string name="s_turn">\'s turn</string>
    <string name="_0">0</string>
    <string name="reset">RESET</string>
    <string name="dhruvil">~Dhruvil❤   ️ </string>
    <string name="refresh_button">Refresh Button</string>
    <string name="new_game_score">new game score</string>
    <string name="playboard">playboard</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>
    <string name="button9">button9</string>
</resources>